# Save_Manager

./: CMakeLists.txt  GUI1.psd  Make.bat  README.md  gen filelist.h.py  make clean make.bat
channel/code/: app.xml
channel/meta/: meta.xml
src/: Application.cpp  Application.h  main.cpp  main.h
src/common/: common.h  gx2_ext.h  os_defs.h  types.h
src/dynamic_libs/: exports.h  padscore_functions.h
src/fs/: CFile.hpp  DirList.cpp  DirList.h  fs_utils.h
src/gui/: FreeTypeGX.h  GameBgImage.h  GameIcon.h  GameIconModel.h  GridBackground.h  Gui.h  GuiButton.cpp  GuiButton.h  GuiCheckBox.h  GuiController.h  GuiDragListener.h  GuiElement.h  GuiFrame.h  GuiImage.h  GuiImageAsync.h  GuiImageData.cpp  GuiImageData.h  GuiMainWindowScreen.h  GuiParticleImage.h  GuiSelectBox.h  GuiSound.h  GuiSwitch.h  GuiText.cpp  GuiText.h  GuiToggle.h  GuiTrigger.h  Scrollbar.cpp  Scrollbar.h  VPadController.h  WPadController.h  sigslot.h
src/menu/: MainWindow.cpp  MainWindow.h  SaveWindow.cpp  SaveWindow.h
src/resources/: Resources.h  filelist.h
src/sounds/: BufferCircle.hpp  Mp3Decoder.hpp  OggDecoder.hpp  SoundDecoder.hpp  SoundHandler.hpp  Voice.h  WavDecoder.hpp
src/system/: AsyncDeleter.h  CThread.h  exception_handler.h  memory.c  memory.h
src/utils/: MetaXML.cpp  MetaXML.h  StringSearch.cpp  StringSearch.h  StringTools.h  logger.h  utils.h
src/video/: CVideo.h
src/video/shaders/: ColorShader.h  FXAAShader.h  FetchShader.h  PixelShader.h  Shader.h  Shader3D.h  ShaderFractalColor.h  Texture2DShader.h  VertexShader.h
